--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -5,11 +5,6 @@ xsi:schemaLocation=
 "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
              
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>net.wasdev.wlp.maven.parent</groupId>
-        <artifactId>liberty-maven-app-parent</artifactId>
-        <version>RELEASE</version>
-    </parent>
 
     <groupId>io.openliberty.guides</groupId>
     <artifactId>rest</artifactId>
@@ -115,7 +110,7 @@ xsi:schemaLocation=
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <version>2.18.1</version>
                 <executions>
                     <execution>
                         <phase>test</phase>
@@ -135,6 +130,7 @@ xsi:schemaLocation=
             <plugin>
                 <groupId>net.wasdev.wlp.maven.plugins</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
+                <version>2.6.1</version>
                 <configuration>
                     <assemblyArtifact>
                          <groupId>io.openliberty</groupId>
@@ -152,14 +148,49 @@ xsi:schemaLocation=
                     </bootstrapProperties>
                 </configuration>
                 <executions>
+                    <!-- Install the OL runtime -->
+                    <execution>
+                        <id>install-liberty</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>install-server</goal>
+                        </goals>
+                    </execution>
+                    <!-- Create defaultServer -->
+                    <execution>
+                        <id>create-server</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>create-server</goal>
+                        </goals>
+                    </execution>
                     <!-- Install the app into the apps/ directory of defaultServer -->
                     <execution>
-                        <id>install-apps</id>
+                        <id>install-app</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>install-apps</goal>
+                        </goals>
                         <configuration>
                             <appsDirectory>apps</appsDirectory>
                             <stripVersion>true</stripVersion>
                             <installAppPackages>project</installAppPackages>
                         </configuration>
+                    </execution>
+                    <!-- Test start and stop server -->
+                    <execution>
+                        <id>start-server</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>test-start-server</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop-server</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>test-stop-server</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -167,7 +198,7 @@ xsi:schemaLocation=
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <version>2.18.1</version>
                 <executions>
                     <execution>
                         <phase>integration-test</phase>
