--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,14 @@ before_script:
 - cd finish
 script:
 - mvn -q clean install
-- docker build -t ol-runtime .
-- docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v target/liberty/wlp/usr/servers:/servers ol-runtime
-- status="$(curl --write-out "%{http_code}\n" --silent --output /dev/null "http://localhost:9080/LibertyProject/System/properties")"; if [ "$status" == "200" ]; then echo ENDPOINT OK; else echo "$status"; echo ENDPOINT NOT OK; exit 1; fi;
-- docker stop rest-app
-- docker rm rest-app
+- pwd
+- SCRIPT_PATH=$(dirname `which $0`)
+- echo "$SCRIPT_PATH"
+# - docker build -t ol-runtime .
+# - docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v target/liberty/wlp/usr/servers:/servers ol-runtime
+# - status="$(curl --write-out "%{http_code}\n" --silent --output /dev/null "http://localhost:9080/LibertyProject/System/properties")"; if [ "$status" == "200" ]; then echo ENDPOINT OK; else echo "$status"; echo ENDPOINT NOT OK; exit 1; fi;
+# - docker stop rest-app
+# - docker rm rest-app
 - serverName=$(target/liberty/wlp/bin/server list | cut -d '.' -f2| tr -d '\n');
 - build=$(grep "Open Liberty" target/liberty/wlp/usr/servers/"$serverName"/logs/console.log
   | cut -d' ' -f5 | cut -d')' -f1 ); release=$( echo "$build" | cut -d'/' -f1); number=$(
