--- a/start/pom.xml
+++ b/start/pom.xml
@@ -7,7 +7,7 @@ xsi:schemaLocation=
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.openliberty.guides</groupId>
-    <artifactId>rest</artifactId>
+    <artifactId>guide-docker</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
