--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -150,12 +150,11 @@ xsi:schemaLocation=
                 <artifactId>liberty-maven-plugin</artifactId>
                 <version>2.6.1</version>
                 <configuration>
-                    <assemblyArtifact>
-                         <groupId>io.openliberty</groupId>
-                         <artifactId>openliberty-runtime</artifactId>
-                         <version>RELEASE</version>
-                        <type>zip</type>
-                    </assemblyArtifact>
+                    <install>
+			<runtimeUrl>
+				https://public.dhe.ibm.com/ibmdl/export/pub/software/openliberty/runtime/nightly/2020-04-01_1714/openliberty-20.0.0.4-cl200420200401-1714.zip
+                </runtimeUrl>
+		</install>
                     <configFile>src/main/liberty/config/server.xml</configFile>
                     <packageFile>${package.file}</packageFile>
                     <include>${packaging.type}</include>
