--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -17,8 +17,9 @@ xsi:schemaLocation=
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <app.name>LibertyProject</app.name>
-        <testServerHttpPort>9080</testServerHttpPort>
-        <testServerHttpsPort>9443</testServerHttpsPort>
+        <!-- Liberty configuration -->
+        <liberty.var.default.http.port>9080</liberty.var.default.http.port>
+        <liberty.var.default.https.port>9443</liberty.var.default.https.port>
         <warContext>${app.name}</warContext>
         <package.file>${project.build.directory}/${app.name}.zip</package.file>
         <packaging.type>usr</packaging.type>
@@ -37,6 +38,7 @@ xsi:schemaLocation=
     </dependencyManagement>
 
     <dependencies>
+        <!-- Provided dependencies -->
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
@@ -62,6 +64,7 @@ xsi:schemaLocation=
             <type>esa</type>
             <scope>provided</scope>
         </dependency>
+        <!-- For tests -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -86,41 +89,11 @@ xsi:schemaLocation=
             <version>1.0.4</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>io.openliberty.features</groupId>
-            <artifactId>jaxrs-2.1</artifactId>
-            <type>esa</type>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.openliberty.features</groupId>
-            <artifactId>jsonp-1.1</artifactId>
-            <type>esa</type>
-            <scope>provided</scope>
-        </dependency>
         <!-- Support for JDK 9 and above -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-core</artifactId>
-            <version>2.3.0.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.3.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -159,22 +132,26 @@ xsi:schemaLocation=
             </plugin>
             <!-- Enable liberty-maven plugin -->
             <plugin>
-                <groupId>net.wasdev.wlp.maven.plugins</groupId>
+                <!-- <groupId>net.wasdev.wlp.maven.plugins</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>2.6.1</version> -->
+                <groupId>io.openliberty.tools</groupId>
+                <artifactId>liberty-maven-plugin</artifactId>
+                <version>3.2</version>
                 <configuration>
-                    <assemblyArtifact>
+                    <runtimeArtifact>
                          <groupId>io.openliberty</groupId>
                          <artifactId>openliberty-runtime</artifactId>
                          <version>RELEASE</version>
                         <type>zip</type>
-                    </assemblyArtifact>
-                    <configFile>src/main/liberty/config/server.xml</configFile>
-                    <packageFile>${package.file}</packageFile>
-                    <include>${packaging.type}</include>
+                    </runtimeArtifact>
+                    <serverXmlFile>src/main/liberty/config/server.xml</serverXmlFile>
+                    <packageDirectory>${project.build.directory}</packageDirectory>
+                    <packageFile>${app.name}.zip</packageFile>
+                    <packageType>usr</packageType>
                     <bootstrapProperties>
-                        <default.http.port>${testServerHttpPort}</default.http.port>
-                        <default.https.port>${testServerHttpsPort}</default.https.port>
+                        <default.http.port>${liberty.var.default.http.port}</default.http.port>
+                        <default.https.port>${liberty.var.default.https.port}</default.https.port>
                         <app.context.root>${warContext}</app.context.root>
                     </bootstrapProperties>
                 </configuration>
@@ -184,7 +161,7 @@ xsi:schemaLocation=
                         <id>install-liberty</id>
                         <phase>prepare-package</phase>
                         <goals>
-                            <goal>install-server</goal>
+                            <goal>install</goal>
                         </goals>
                     </execution>
                     <!-- Create defaultServer -->
@@ -192,7 +169,7 @@ xsi:schemaLocation=
                         <id>create-server</id>
                         <phase>prepare-package</phase>
                         <goals>
-                            <goal>create-server</goal>
+                            <goal>create</goal>
                         </goals>
                     </execution>
                     <!-- Install the app into the apps/ directory of defaultServer -->
@@ -219,14 +196,14 @@ xsi:schemaLocation=
                         <id>start-server</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>test-start-server</goal>
+                            <goal>test-start</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>stop-server</id>
                         <phase>post-integration-test</phase>
                         <goals>
-                            <goal>test-stop-server</goal>
+                            <goal>test-stop</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -249,7 +226,7 @@ xsi:schemaLocation=
                             </includes>
                             <systemPropertyVariables>
                                 <liberty.test.port>
-                                    ${testServerHttpPort}
+                                    ${liberty.var.default.http.port}
                                 </liberty.test.port>
                                 <war.name>${warContext}</war.name>
                             </systemPropertyVariables>
