--- a/start/pom.xml
+++ b/start/pom.xml
@@ -39,9 +39,9 @@ xsi:schemaLocation=
         </dependency>
         <!-- For tests -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -62,7 +62,6 @@ xsi:schemaLocation=
             <version>1.0.4</version>
             <scope>test</scope>
         </dependency>
-        <!-- Support for JDK 9 and above -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
